--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <input type="Submit" value="Submit">
     <br><br>
 
-    <a href="/Table.html">Click Here For Table File</a>
+    <a href="./Table.html">Click Here For Table File</a>
 
 </body>
 </html>
