--- a/Table.html
+++ b/Table.html
@@ -126,7 +126,7 @@
     </table>
     <br><br><br>
 
-    <a href="/index.html">Click Here For Form Page</a>
+    <a href="./index.html">Click Here For Form Page</a>
     
 </body>
 </html>
